fix containers indicators z-index

--- a/src/components/indicators/editor.scss
+++ b/src/components/indicators/editor.scss
@@ -4,7 +4,6 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 2;
 	transition: opacity 0.5s;
 
 	&:hover {
